# ESP32-Web-Chat

./: .gitignore  CMakeLists.txt  LICENSE  README-CN.md  README.md  myguess.md  require.md  sdkconfig.defaults  structure.md
docs/: architecture.md  build-and-flash.md  maintenance.md  overview.md  protocol.md
main/: CMakeLists.txt  Kconfig.projbuild  index.html  main.c  message_id_store.c
main/include/: app_context.h  chat_config.h  chat_types.h
main/include/chat/: history.h  protocol.h  sessions.h
main/include/common/: settings.h  utils.h
main/include/network/: dns_server.h  softap.h
main/include/server/: http_server.h  websocket_server.h
main/include/storage/: message_id_store.h  mount.h
main/src/: index.html  main.c  script.js  style.css
main/src/chat/: history.c  protocol.c  sessions.c
main/src/common/: settings.c  utils.c
main/src/network/: dns_server.c  softap.c
main/src/server/: http_server.c  websocket_server.c
main/src/storage/: message_id_store.c  mount.c
main/web/: index.html
main/web/css/: style.css
main/web/js/: script.js
